--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ pytest-custom_exit_code
 boto3~=1.26.46
 python-dateutil~=2.8.2
 requests~=2.26.0
+webdriver-manager==4.0.1
 psycopg2-binary~=2.9.6
